# edge-runtime

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  architecture.toml  bootstrap.ps1  bootstrap.sh  rules-override.toml
edge/scm/server/: CHANGELOG.md  Cargo.toml  README.md
grpc/scm/: CHANGELOG.md  Cargo.toml
grpc/scm/examples/: noop_server.rs
grpc/scm/tests/: deps_coverage_int_test.rs  edge_domain_int_test.rs  grpc_error_int_test.rs  grpc_ingress_svc_factory_int_test.rs  grpc_server_build_svc_factory_int_test.rs  grpc_server_builder_svc_factory_int_test.rs  grpc_server_config_build_svc_factory_int_test.rs  grpc_server_config_builder_int_test.rs  grpc_server_config_builder_svc_factory_int_test.rs  grpc_server_config_error_int_test.rs  grpc_server_config_int_test.rs  grpc_server_config_ops_svc_factory_int_test.rs  grpc_server_config_svc_factory_int_test.rs  grpc_server_error_int_test.rs  grpc_server_manage_svc_factory_int_test.rs  grpc_server_observer_int_test.rs  grpc_server_observer_ops_svc_factory_int_test.rs  grpc_server_observer_svc_factory_int_test.rs  grpc_server_observer_svc_int_test.rs  grpc_server_svc_factory_int_test.rs  grpc_server_svc_int_test.rs  grpc_server_svc_ops_svc_factory_int_test.rs  grpc_validation_error_int_test.rs  grpc_validator_svc_factory_int_test.rs  noop_grpc_ingress_int_test.rs  noop_grpc_ingress_svc_factory_int_test.rs  noop_grpc_validator_impl_int_test.rs  noop_grpc_validator_svc_factory_int_test.rs  peer_identity_extractor_int_test.rs  status_code_convert_contract_int_test.rs  status_code_convert_int_test.rs  status_code_convert_svc_factory_int_test.rs  status_code_converter_int_test.rs  status_code_converter_svc_factory_int_test.rs  status_codes_int_test.rs  tls_svc_int_test.rs  tonic_grpc_server_builder_int_test.rs  tonic_grpc_server_builder_svc_factory_int_test.rs  tonic_grpc_server_int_test.rs  tonic_grpc_server_svc_factory_int_test.rs  (+4 more)
http/scm/: CHANGELOG.md  Cargo.toml
http/scm/examples/: noop_ingress.rs
http/scm/tests/: axum_deps_int_test.rs  axum_http_server_builder_int_test.rs  axum_http_server_helper_int_test.rs  axum_http_server_int_test.rs  edge_domain_int_test.rs  edge_security_runtime_int_test.rs  http_auth_int_test.rs  http_ingress_int_test.rs  http_ingress_result_int_test.rs  http_ingress_svc_int_test.rs  http_int_test.rs  http_method_int_test.rs  http_request_builder_int_test.rs  http_request_int_test.rs  http_server_error_int_test.rs  http_server_svc_factory_int_test.rs  http_server_svc_int_test.rs  noop_http_ingress_int_test.rs  noop_validator_impl_int_test.rs  server_svc_int_test.rs  tls_svc_int_test.rs  validator_int_test.rs  validator_svc_int_test.rs
main/: Cargo.toml  README.md  architecture.toml
main/actor/: README.md
main/actor/docs/: README.md
main/actor/examples/: counter_actor.rs
main/actor/tests/: actor_context_int_test.rs  actor_int_test.rs  actor_runtime_int_test.rs  actor_spawn_handle_int_test.rs  actor_svc_int_test.rs  application_config_builder_int_test.rs  async_std_actor_int_test.rs  spi_security_test.rs  validator_int_test.rs
main/config/: application.toml  architecture.toml  default.toml
main/config/tenants/: example.toml
main/examples/: runtime_lifecycle.rs
main/features/actor/: Cargo.toml  SECURITY.md  deny.toml
main/features/isolator/: Cargo.toml  Cargo_workspace.toml  README.md  SECURITY.md  architecture.toml
main/features/message-broker/: Cargo.toml  README.md  architecture.toml  bootstrap.ps1
main/features/resource-policy/: Cargo.toml  architecture.toml  deny.toml
main/features/scheduler/: Cargo.toml  README.md  SECURITY.md  architecture.toml  deny.toml
main/features/server/: Cargo.toml  README.md
main/isolator/: Cargo.toml  deny.toml
main/isolator/config/: default.toml
main/isolator/docs/: README.md
main/isolator/tests/: default_swe_edge_runtime_isolator_impl_int_test.rs  default_swe_edge_runtime_isolator_int_test.rs  default_swe_edge_runtime_isolator_validator_impl_int_test.rs  error_int_test.rs  ingress_int_test.rs  isolator_config_int_test.rs  isolator_int_test.rs  isolator_svc_int_test.rs  noop_isolation_profile_int_test.rs  profile_spec_builder_int_test.rs  profile_spec_int_test.rs  seccomp_isolator_int_test.rs  swe_edge_runtime_isolator_factory_int_test.rs  swe_edge_runtime_isolator_impl_int_test.rs  swe_edge_runtime_isolator_int_test.rs  swe_edge_runtime_isolator_trait_int_test.rs  traits_int_test.rs
main/message-broker/: Cargo.toml
main/message-broker/examples/: in_memory_broker.rs
main/message-broker/tests/: broker_backend_config_int_test.rs  broker_error_int_test.rs  config_loading_int_test.rs  edge_message_broker_svc_int_test.rs  kafka_message_broker_int_test.rs  kafka_task_queue_int_test.rs  nats_int_test.rs  spi_security_test.rs  task_id_int_test.rs  task_queue_int_test.rs
main/resource-policy/: Cargo.toml  README.md
main/resource-policy/docs/: README.md
main/resource-policy/src/: lib.rs
main/resource-policy/tests/: default_swe_edge_runtime_resource_policy_impl_int_test.rs  default_swe_edge_runtime_resource_policy_int_test.rs  error_int_test.rs  noop_runtime_resource_policy_int_test.rs  policy_svc_int_test.rs  resource_limits_int_test.rs  resource_policy_error_int_test.rs  resource_policy_int_test.rs  swe_edge_runtime_resource_policy_api_int_test.rs  swe_edge_runtime_resource_policy_factory_int_test.rs  (+5 more)
main/scheduler/: CHANGELOG.md  Cargo.toml  README.md  bootstrap.sh
main/server/: Cargo.toml
main/src/: lib.rs
main/tests/: dep_coverage_int_test.rs  edge_runtime_int_test.rs  input_int_test.rs  metrics_handler_int_test.rs  runtime_manager_int_test.rs  runtime_result_int_test.rs  saf_config_loader_int_test.rs  validator_int_test.rs
message-broker/scm/: Cargo.toml
scm/: .gitignore  Cargo.toml  SECURITY.md  bootstrap.ps1  bootstrap.sh  deny.toml
scm/cli/: CHANGELOG.md  Cargo.toml  bootstrap.sh
scm/grpc/: README.md  SECURITY.md
scm/http/: Cargo.toml  README.md
scm/message-broker/: Cargo.toml
scm/server/: CHANGELOG.md  Cargo.toml
server/: Cargo.toml
server/scm/: Cargo.toml  bootstrap.ps1  bootstrap.sh
(+1719 files in other folders)
