[workspace]
resolver = "2"
members  = [
  "main/actor",
  "main/isolator",
  "main/message-broker",
  "main/resource-policy",
  "main/scheduler",
  "main/server",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.dependencies]
swe-edge-configbuilder          = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", branch = "dev" }
swe-edge-egress-subprocess      = { path = "../egress/subprocess/main/features/subprocess" }
swe-edge-observ-config          = { path = "../observ-config/swe-edge-observ-config" }
swe-edge-runtime-message-broker = { path = "main/message-broker", features = ["tokio-rt"] }
swe-edge-runtime-scheduler      = { path = "main/scheduler" }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
