[package]
name         = "swe-edge-runtime-main"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "edge — process-level runtime: wires ingress + proxy + domain + egress, lifecycle, and systemd notify."
keywords     = ["daemon", "runtime", "lifecycle", "systemd", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "runtime"

[lib]
name = "swe_edge_runtime"
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde.workspace       = true
toml.workspace        = true
dirs.workspace        = true
serde_json.workspace  = true
thiserror.workspace   = true
async-trait.workspace = true
futures.workspace     = true
tokio.workspace       = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
parking_lot.workspace = true
edge-proxy.workspace               = true
swe-edge-ingress.workspace              = true
swe-edge-ingress-verifier.workspace         = true
swe-edge-ingress-grpc-reflection.workspace  = true
edge-domain.workspace                       = true
swe-edge-egress-grpc.workspace = true
swe-edge-egress-http.workspace = true

[dev-dependencies]
tokio        = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
tempfile     = "3"
reqwest.workspace     = true
async-trait.workspace = true
edge-proxy.workspace          = true
swe-edge-ingress.workspace    = true
swe-edge-egress-grpc.workspace = true
swe-edge-egress-http.workspace = true

[[test]]
name = "edge_runtime_int_test"
path = "tests/edge_runtime_int_test.rs"

[[test]]
name = "composite_int_test"
path = "tests/composite_int_test.rs"

[[test]]
name = "json_codec_int_test"
path = "tests/json_codec_int_test.rs"

[lints]
workspace = true
