[workspace]
resolver = "2"
members  = [
  "message-broker",
  "server",
]

[workspace.package]
version      = "0.3.9"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-runtime"

[workspace.dependencies]
swe-edge-configbuilder          = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git",  tag = "v0.4.1" }
swe-edge-message-broker         = { git = "https://github.com/sweengineeringlabs/edge-message-broker.git", tag = "v0.3.2" }
swe-edge-observ-config          = { git = "https://github.com/sweengineeringlabs/edge-observ-config.git",  tag = "v0.2.1" }
swe-edge-runtime-message-broker = { path = "message-broker", features = ["tokio-rt"] }
swe-edge-egress-subprocess      = { path = "../../egress/subprocess/scm/subprocess" }

edge-domain                      = { git = "https://github.com/sweengineeringlabs/edge-domain.git",             tag = "v0.8.27" }
edge-proxy                       = { git = "https://github.com/sweengineeringlabs/edge-proxy.git",              tag = "v0.3.2" }
swe-edge-ingress-http            = { package = "swe-edge-ingress-http-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-http.git",      tag = "v0.4.3" }
swe-edge-ingress-grpc            = { package = "swe-edge-ingress-grpc-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",      tag = "v0.5.5" }
swe-edge-ingress-grpc-reflection = { git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",                                                   tag = "v0.5.5" }
swe-edge-ingress-verifier        = { git = "https://github.com/sweengineeringlabs/edge-ingress-security.git",                                               tag = "v0.6.2" }
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-grpc.git",       tag = "v0.4.4" }
swe-edge-egress-http             = { package = "swe-edge-egress-http-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-http.git",       tag = "v0.4.1" }
swe-observ-metrics               = { package = "swe_justobserv_metrics",           git = "ssh://git@github.com/sweengineeringlabs/justobserv.git",           tag = "v0.2.1" }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"


