[workspace]
resolver = "2"
members  = ["scm"]

[workspace.dependencies]
swe-edge-configbuilder          = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git",  tag = "v0.4.1" }
swe-edge-message-broker         = { git = "https://github.com/sweengineeringlabs/edge-message-broker.git", tag = "v0.3.2" }
swe-edge-observ-config          = { git = "https://github.com/sweengineeringlabs/edge-observ-config.git",  tag = "v0.2.1" }
swe-edge-runtime-cli            = { path = "../cli/scm" }
swe-edge-runtime-grpc           = { path = "../grpc/scm" }
swe-edge-runtime-http           = { path = "../http/scm" }
swe-edge-runtime-message-broker = { path = "../message-broker/scm", features = ["tokio-rt"] }
swe-edge-egress-subprocess      = { path = "../../egress/subprocess/scm/subprocess" }

edge-domain                      = { git = "https://github.com/sweengineeringlabs/edge-domain.git",             tag = "v0.8.31", features = ["security"] }
edge-proxy                       = { git = "https://github.com/sweengineeringlabs/edge-proxy.git",              tag = "v0.3.2" }
swe-edge-ingress-http            = { package = "swe-edge-ingress-http-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-http.git",      tag = "v0.4.6" }
swe-edge-ingress-grpc            = { package = "swe-edge-ingress-grpc-transport",  git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",      tag = "v0.5.6" }
swe-edge-ingress-grpc-reflection = { git = "https://github.com/sweengineeringlabs/edge-ingress-grpc.git",                                                   tag = "v0.5.6" }
swe-edge-ingress-verifier        = { git = "https://github.com/sweengineeringlabs/edge-ingress-security.git",                                               tag = "v0.6.2" }
swe-edge-egress-grpc             = { package = "swe-edge-egress-grpc-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-grpc.git",       tag = "v0.4.4" }
swe-edge-egress-http             = { package = "swe-edge-egress-http-transport",   git = "https://github.com/sweengineeringlabs/edge-egress-http.git",       tag = "v0.4.1" }
swe-observ-metrics               = { package = "swe_justobserv_metrics",           git = "ssh://git@github.com/sweengineeringlabs/justobserv.git",           tag = "v0.2.1" }
