[package]
name             = "swe-edge-runtime-http"
version          = "0.4.0"
edition          = "2021"
license          = "MIT OR Apache-2.0"
rust-version     = "1.95"
authors          = ["SWE Engineering Labs"]
repository       = "https://github.com/sweengineeringlabs/edge-runtime"
description      = "HTTP server binding — Axum server implementation over swe-edge-ingress-http port contracts"
keywords         = ["http", "server", "axum", "async", "swe"]
categories       = ["network-programming", "asynchronous"]

[package.metadata.arch]
application_type = "lib"
service_type     = "http-runtime"

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "http-runtime"

[lib]
name = "swe_edge_runtime_http"
path = "main/src/lib.rs"

[dependencies]
swe-edge-ingress-http     = { package = "swe-edge-ingress-http-transport", git = "https://github.com/sweengineeringlabs/edge-ingress-http.git", tag = "v0.5.2" }
swe-edge-ingress-verifier = { git = "https://github.com/sweengineeringlabs/edge-ingress-security.git", tag = "v0.6.3" }
edge-domain               = { git = "https://github.com/sweengineeringlabs/edge-domain.git",           tag = "v0.10.7", features = ["security"] }
edge-domain-security      = { git = "https://github.com/sweengineeringlabs/edge-domain.git",           tag = "v0.12.0" }
tokio-rustls              = "0.26"
rustls                    = { version = "0.23", features = ["ring"] }
rustls-pemfile            = "2"
axum                      = { version = "0.8", features = ["ws"] }
tower                     = { version = "0.5", features = ["timeout"] }
tower-http                = { version = "0.6", features = ["trace", "limit"] }
hyper                     = { version = "1", features = ["http1", "http2"] }
hyper-util                = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
http                      = "1"
bytes                     = "1"
futures                   = "0.3"
tokio                     = { version = "1.52", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }
tracing                   = { version = "0.1", default-features = false }
thiserror                 = "2"
serde_json                = "1"

[[example]]
name = "noop_ingress"
path = "examples/noop_ingress.rs"

[dev-dependencies]
futures     = "0.3"
edge-domain = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.10.7", features = ["security"] }
rcgen       = "0.13"
tempfile    = "3"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
