[package]
name         = "swe-edge-runtime-scheduler"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — async scheduler: runtime-agnostic Scheduler trait plus an optional tokio-backed implementation."
keywords     = ["scheduler", "runtime", "tokio", "executor", "swe"]
categories   = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "scheduler"

[lib]
name = "swe_edge_runtime_scheduler"
path = "src/lib.rs"

[features]
default  = ["tokio-rt"]
tokio-rt = ["dep:tokio", "dep:serde"]

[dependencies]
thiserror            = "2"
tracing              = { version = "0.1", default-features = false }
tokio                = { version = "1.0", features = ["rt-multi-thread", "signal", "sync", "time", "macros"], optional = true }
serde                = { version = "1.0", features = ["derive"], optional = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
edge-domain = { workspace = true }
toml        = "0.8"
futures     = "0.3"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"

[[test]]
name = "spi_security_e2e_test"
path = "tests/spi_security_e2e_test.rs"

[[test]]
name = "scheduler_int_test"
path = "tests/scheduler_int_test.rs"

[[test]]
name = "scheduler_result_e2e_test"
path = "tests/scheduler_result_e2e_test.rs"

[[test]]
name = "tokio_scheduler_int_test"
path = "tests/tokio_scheduler_int_test.rs"

[[test]]
name = "scheduler_error_e2e_test"
path = "tests/scheduler_error_e2e_test.rs"

[[test]]
name = "scheduler_svc_e2e_test"
path = "tests/scheduler_svc_e2e_test.rs"

[[test]]
name = "tokio_scheduler_config_e2e_test"
path = "tests/tokio_scheduler_config_e2e_test.rs"

[[test]]
name = "observability_config_e2e_test"
path = "tests/observability_config_e2e_test.rs"

[[test]]
name = "tracing_config_e2e_test"
path = "tests/tracing_config_e2e_test.rs"

[[test]]
name = "tokio_scheduler_config_builder_int_test"
path = "tests/tokio_scheduler_config_builder_int_test.rs"

[[example]]
name = "scheduler_usage"
path = "examples/scheduler_usage.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
