[package]
name         = "swe-edge-runtime-message-broker"
version      = "0.3.9"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-runtime"
description  = "edge — message broker: runtime-agnostic MessageBroker trait with in-memory, NATS, and Kafka backends."
keywords     = ["message-broker", "pubsub", "nats", "async", "swe"]
categories   = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "message-broker"

[lib]
name = "swe_edge_runtime_message_broker"
path = "main/src/lib.rs"

[features]
default  = []
tokio-rt = ["dep:tokio"]
nats     = ["dep:async-nats", "dep:tokio"]
kafka    = ["dep:rdkafka", "dep:tokio"]

[dependencies]
bytes           = "1"
futures         = "0.3"
thiserror       = "2.0"
tracing         = { version = "0.1", default-features = false }
tokio           = { version = "1.52", features = ["sync", "rt", "time"], optional = true }
async-nats      = { version = "0.49", optional = true }
rdkafka         = { version = "0.39", features = ["tokio", "cmake-build"], optional = true }
uuid            = { version = "1.23", features = ["v4"] }
serde           = { version = "1.0", features = ["derive"] }
swe-edge-message-broker = { git = "https://github.com/sweengineeringlabs/edge-message-broker.git", tag = "v0.3.2" }
swe-edge-configbuilder  = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git",  tag = "v0.4.1" }

[dev-dependencies]
tokio      = { version = "1.52", features = ["rt-multi-thread", "macros"] }
futures    = "0.3"
bytes      = "1"
async-nats = { version = "0.49" }
# Unconditional dev dep so rdkafka_int_test.rs can import rdkafka directly
# without requiring the kafka feature, satisfying arch rule 95 (dep test coverage).
rdkafka    = { version = "0.39", features = ["tokio", "cmake-build"] }

[[example]]
name = "in_memory_broker"
path = "examples/in_memory_broker.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
